# SqlPool

./: CMakeLists.txt  README.md  autobuild.sh
include/: commonConnection.h  connectionPoll.h  public.h
lib/: mysql.init
src/: CMakeLists.txt  ConnectionPool.cpp  commonConnection.cpp  main.cpp
